# rc_lab_internship_study

./: README.md
mastering_ros_robot_description_pkg/urdf/: diff_wheeled_robot_with_laser.xacro  seven_dof_arm.xacro  seven_dof_arm_with_rgbd.xacro
seven_dof_arm_config/: .setup_assistant
seven_dof_arm_config/config/: fake_controllers.yaml  gazebo_seven_dof_arm.urdf  ompl_planning.yaml  ros_controllers.yaml  seven_dof_arm.srdf  simple_moveit_controllers.yaml
seven_dof_arm_config/launch/: gazebo.launch  planning_context.launch  ros_controllers.launch  seven_dof_arm_bringup_moveit.launch  seven_dof_arm_moveit_controller_manager.launch
seven_dof_arm_gazebo/: CMakeLists.txt  package.xml
seven_dof_arm_gazebo/launch/: diff_wheeled_gazebo.launch  diff_wheeled_gazebo_full.launch  diff_wheeled_gazebo_with_laser.launch  seven_dof_arm_gazebo.launch  seven_dof_arm_world.launch
seven_dof_arm_test/: CMakeLists.txt  package.xml
seven_dof_arm_test/src/: add_collision_object.cpp  attach_detach_object.cpp  check_collision.cpp  remove_collision_object.cpp  test_custom.cpp  test_random.cpp
z1_arm_gazebo/: CMakeLists.txt
z1_arm_gazebo/launch/: z1_arm_world.launch
z1_arm_test/: CMakeLists.txt
z1_arm_test/src/: add_collision_object.cpp  test_custom.cpp  test_random.cpp
z1_config/: .setup_assistant  CMakeLists.txt
z1_config/config/: fake_controllers.yaml  trajectory_control.yaml  z1_description.srdf
z1_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  z1_arm_bringup_moveit.launch  z1_arm_moveit_controller_manager.launch
z1_description/: urdf_z1.rviz
z1_description/launch/: view_demo.launch  view_z1_tilt.launch
z1_description/xacro/: robot.xacro  robot_generated_urdf.urdf  z1_arm.xacro  z1_description.gv
z1_moveit/: .setup_assistant  CMakeLists.txt
z1_moveit/config/: ros_controllers.yaml  trajectory_controll.yaml  z1_arm.srdf  z1_description.srdf
z1_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  z1_arm_bringup_moveit.launch  (+5 more)
z1_test/: CMakeLists.txt  package.xml
z1_test/src/: z1_test_random.cpp
